; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_i82092.c_set_bridge_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_i82092.c_set_bridge_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"set_bridge_state\00", align 1
@I365_GBLCTL = common dso_local global i32 0, align 4
@I365_GENCTL = common dso_local global i32 0, align 4
@I365_INTCTL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_bridge_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_bridge_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @enter(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @I365_GBLCTL, align 4
  %6 = call i32 @indirect_write(i32 %4, i32 %5, i32 0)
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @I365_GENCTL, align 4
  %9 = call i32 @indirect_write(i32 %7, i32 %8, i32 0)
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @I365_INTCTL, align 4
  %12 = call i32 @indirect_setbit(i32 %10, i32 %11, i32 8)
  %13 = call i32 @leave(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @enter(i8*) #1

declare dso_local i32 @indirect_write(i32, i32, i32) #1

declare dso_local i32 @indirect_setbit(i32, i32, i32) #1

declare dso_local i32 @leave(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
